--- a/index.html
+++ b/index.html
@@ -134,27 +134,21 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <span class="contact-label">Phone:</span>
-                            <a href="tel:+1234567890" class="contact-link">(123) 456-7890</a>
+                            <a href="tel:+1234567890" class="contact-link">(435) 359-3444</a>
                         </div>
                         <div class="contact-item">
                             <span class="contact-label">Email:</span>
-                            <a href="mailto:info@parkerswindshield.com" class="contact-link">info@parkerswindshield.com</a>
+                            <a href="mailto:info@parkerswindshield.com" class="contact-link">parker.holmes.reachme@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <span class="contact-label">Service Area:</span>
-                            <span class="contact-text">Greater Metro Area</span>
+                            <span class="contact-text">Utah and Salt Lake Counties</span>
                         </div>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Service Hours</h3>
-                    <p>Monday - Friday: 8:00 AM - 6:00 PM</p>
-                    <p>Saturday: 9:00 AM - 4:00 PM</p>
-                    <p>Sunday: By appointment</p>
-                </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Parker's Windshield Repair. All rights reserved.</p>
+                <p>&copy; 2025 Parker's Windshield Repair LLC. All rights reserved.</p>
             </div>
         </div>
     </footer>
